JDK11 fix