@@ -5,12 +5,13 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
 public class SelectionChangeTest {
     private void checkChange(int startBefore, int endBefore, int startAfter, int endAfter, PlainTextChange... changes) {
-        List<PlainTextChange> changeList = Arrays.stream(changes).toList();
+        List<PlainTextChange> changeList = Arrays.stream(changes).collect(Collectors.toList());
         SelectionChange.Range range = new SelectionChange().apply(changeList, startBefore, endBefore);
         assertEquals("Start does not match", startAfter, range.start());
         assertEquals("End does not match", endAfter, range.end());
